# server/src/openapi.ts
@@ -378,6 +378,9 @@ export const openApiDocument = {
                       format: 'date-time',
                       nullable: true,
                     },
+                    profileImage: { type: 'string', nullable: true },
+                    address: { type: 'string', nullable: true },
+                    employmentStatus: { type: 'string', nullable: true },
                     createdAt: { type: 'string', format: 'date-time' },
                     updatedAt: { type: 'string', format: 'date-time' },
                   },
@@ -437,6 +440,9 @@ export const openApiDocument = {
                       format: 'date-time',
                       nullable: true,
                     },
+                    profileImage: { type: 'string', nullable: true },
+                    address: { type: 'string', nullable: true },
+                    employmentStatus: { type: 'string', nullable: true },
                     createdAt: { type: 'string', format: 'date-time' },
                     updatedAt: { type: 'string', format: 'date-time' },
                   },
@@ -489,6 +495,9 @@ export const openApiDocument = {
                             format: 'date-time',
                             nullable: true,
                           },
+                          profileImage: { type: 'string', nullable: true },
+                          address: { type: 'string', nullable: true },
+                          employmentStatus: { type: 'string', nullable: true },
                           createdAt: { type: 'string', format: 'date-time' },
                           updatedAt: { type: 'string', format: 'date-time' },
                         },
@@ -549,6 +558,9 @@ export const openApiDocument = {
                       format: 'date-time',
                       nullable: true,
                     },
+                    profileImage: { type: 'string', nullable: true },
+                    address: { type: 'string', nullable: true },
+                    employmentStatus: { type: 'string', nullable: true },
                     createdAt: { type: 'string', format: 'date-time' },
                     updatedAt: { type: 'string', format: 'date-time' },
                   },
